# TooGoodToGo-CLI

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/workflows/: ci.yml  release.yml
docs/internal/: INFRASTRUCTURE.md  PUBLISHING_PLAN.md
src/tgtg_cli/: __init__.py  container.py
src/tgtg_cli/apis/: acs.py  adyen.py  base.py  cryptography.py  tgtg.py
src/tgtg_cli/cli/: __init__.py  __main__.py  app.py  config.py  console.py  executor.py  menu.py  types.py
src/tgtg_cli/services/: account_service.py  order_service.py  product_service.py
src/tgtg_cli/utils/: captcha.py  devices.py  encryption.py  exceptions.py  logging.py  models.py  notifications.py  parsing.py  urls.py  version.py
tests/: test_imports.py
